--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js"
   },
   "engines": {
-    "node" : "v10.8.0"
+    "node" : "10.8.0"
   },
   "author": "",
   "license": "ISC"
