--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "node" : "10.8.0"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies":{
+    "node-telegram-bot-api": "0.30.0",
+    "xmlhttprequest": "1.8.0"
+  }
 }
